--- a/view/user/home.ejs
+++ b/view/user/home.ejs
@@ -21,7 +21,10 @@
                                     </div>
                                 </div>
                                 <div class="banner_img d-none d-lg-block">
-                                    <img src="/user/img/banner_img.png" alt="">
+                                    <a href="/product-details">
+                                        <img src="/user/img/banner_img.png" alt="">
+                                    </a>
+
                                 </div>
                             </div>
                         </div><div class="single_banner_slider">
@@ -38,7 +41,10 @@
                                     </div>
                                 </div>
                                 <div class="banner_img d-none d-lg-block">
-                                    <img src="/user/img/banner_img.png" alt="">
+                                    <a href="/product-details">
+                                        <img src="/user/img/banner_img.png" alt="">
+                                    </a>
+
                                 </div>
                             </div>
                         </div><div class="single_banner_slider">
@@ -55,7 +61,10 @@
                                     </div>
                                 </div>
                                 <div class="banner_img d-none d-lg-block">
-                                    <img src="/user/img/banner_img.png" alt="">
+                                    <a href="/product-details">
+                                        <img src="/user/img/banner_img.png" alt="">
+                                    </a>
+
                                 </div>
                             </div>
                         </div>
@@ -72,7 +81,10 @@
                                     </div>
                                 </div>
                                 <div class="banner_img d-none d-lg-block">
-                                    <img src="/user/img/banner_img.png" alt="">
+                                    <a href="/product-details">
+                                        <img src="/user/img/banner_img.png" alt="">
+                                    </a>
+
                                 </div>
                             </div>
                         </div> -->
@@ -100,7 +112,10 @@
                         <p>Premium Quality</p>
                         <h3>Latest foam Sofa</h3>
                         <a href="#" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
-                        <img src="/user/img/feature/feature_1.png" alt="">
+                        <a href="/product-details">
+                            <img src="/user/img/feature/feature_1.png" alt="">
+                        </a>
+
                     </div>
                 </div>
                 <div class="col-lg-5 col-sm-6">
@@ -108,7 +123,10 @@
                         <p>Premium Quality</p>
                         <h3>Latest foam Sofa</h3>
                         <a href="#" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
-                        <img src="/user/img/feature/feature_2.png" alt="">
+                        <a href="/product-details">
+                            <img src="/user/img/feature/feature_2.png" alt="">
+                        </a>
+
                     </div>
                 </div>
                 <div class="col-lg-5 col-sm-6">
@@ -116,7 +134,10 @@
                         <p>Premium Quality</p>
                         <h3>Latest foam Sofa</h3>
                         <a href="#" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
-                        <img src="/user/img/feature/feature_3.png" alt="">
+                        <a href="/product-details">
+                            <img src="/user/img/feature/feature_3.png" alt="">
+                        </a>
+
                     </div>
                 </div>
                 <div class="col-lg-7 col-sm-6">
@@ -124,7 +145,10 @@
                         <p>Premium Quality</p>
                         <h3>Latest foam Sofa</h3>
                         <a href="#" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
-                        <img src="/user/img/feature/feature_4.png" alt="">
+                        <a href="/product-details">
+                            <img src="/user/img/feature/feature_4.png" alt="">
+                        </a>
+
                     </div>
                 </div>
             </div>
@@ -149,7 +173,10 @@
                             <div class="row align-items-center justify-content-between">
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_1.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_1.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -159,7 +186,10 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_2.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_2.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -169,7 +199,10 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_3.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_3.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -179,7 +212,10 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_4.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_4.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -189,7 +225,10 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_5.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_5.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -199,7 +238,10 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_6.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_6.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -209,7 +251,10 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_7.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_7.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -219,7 +264,10 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_8.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_8.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -233,7 +281,10 @@
                             <div class="row align-items-center justify-content-between">
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_1.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_1.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -243,7 +294,10 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_2.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_2.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -253,7 +307,10 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_3.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_3.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -263,7 +320,10 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_4.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_4.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -273,7 +333,10 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_5.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_5.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -283,7 +346,10 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_6.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_6.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -293,7 +359,10 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_7.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_7.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -303,7 +372,10 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/user/img/product/product_8.png" alt="">
+                                        <a href="/product-details">
+                                            <img src="/user/img/product/product_8.png" alt="">
+                                        </a>
+
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
                                             <h3>$150.00</h3>
@@ -326,7 +398,10 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-lg-6 col-md-6">
                     <div class="offer_img">
-                        <img src="/user/img/offer_img.png" alt="">
+                        <a href="/product-details">
+                            <img src="/user/img/offer_img.png" alt="">
+                        </a>
+
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
@@ -369,35 +444,50 @@
                 <div class="col-lg-12">
                     <div class="best_product_slider owl-carousel">
                         <div class="single_product_item">
-                            <img src="/user/img/product/product_1.png" alt="">
+                            <a href="/product-details">
+                                <img src="/user/img/product/product_1.png" alt="">
+                            </a>
+
                             <div class="single_product_text">
                                 <h4>Quartz Belt Watch</h4>
                                 <h3>$150.00</h3>
                             </div>
                         </div>
                         <div class="single_product_item">
-                            <img src="/user/img/product/product_2.png" alt="">
+                            <a href="/product-details">
+                                <img src="/user/img/product/product_2.png" alt="">
+                            </a>
+
                             <div class="single_product_text">
                                 <h4>Quartz Belt Watch</h4>
                                 <h3>$150.00</h3>
                             </div>
                         </div>
                         <div class="single_product_item">
-                            <img src="/user/img/product/product_3.png" alt="">
+                            <a href="/product-details">
+                                <img src="/user/img/product/product_3.png" alt="">
+                            </a>
+
                             <div class="single_product_text">
                                 <h4>Quartz Belt Watch</h4>
                                 <h3>$150.00</h3>
                             </div>
                         </div>
                         <div class="single_product_item">
-                            <img src="/user/img/product/product_4.png" alt="">
+                            <a href="/product-details">
+                                <img src="/user/img/product/product_4.png" alt="">
+                            </a>
+
                             <div class="single_product_text">
                                 <h4>Quartz Belt Watch</h4>
                                 <h3>$150.00</h3>
                             </div>
                         </div>
                         <div class="single_product_item">
-                            <img src="/user/img/product/product_5.png" alt="">
+                            <a href="/product-details">
+                                <img src="/user/img/product/product_5.png" alt="">
+                            </a>
+
                             <div class="single_product_text">
                                 <h4>Quartz Belt Watch</h4>
                                 <h3>$150.00</h3>
