--- a/view/user/p_details.ejs
+++ b/view/user/p_details.ejs
@@ -65,8 +65,8 @@
                 <input class="input-number" type="text" value="1" min="0" max="10">
                 <span class="number-increment"> <i class="ti-plus"></i></span>
               </div>
-              <a href="#" class="btn_3">add to cart</a>
-              <a href="#" class="like_us"> <i class="ti-heart"></i> </a>
+              <a href="/cart" class="btn_3">add to cart</a>
+              <a href="/wishlist" class="like_us"> <i class="ti-heart"></i> </a>
             </div>
           </div>
         </div>
