--- a/view/user/partials/header.ejs
+++ b/view/user/partials/header.ejs
@@ -125,11 +125,11 @@
               </div>
               <div class="hearer_icon d-flex">
                 <!-- <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a> -->
-                <a href="/" class="di-none"><i class="ti-heart"></i></a>
+                <a href="/wishlist" class="di-none"><i class="ti-heart"></i></a>
                 <div class="dropdown cart">
                   <a
                     class="dropdown-toggle"
-                    href="#"
+                    href="/cart"
                     id="navbarDropdown3"
                     role="button"
                     data-toggle="dropdown"
