--- a/view/user/login.ejs
+++ b/view/user/login.ejs
@@ -53,8 +53,8 @@
                                     <button type="submit" value="submit" class="btn_3">
                                         Log In
                                     </button>
-                                    <a class="lost_pass" href="/signin/otp-phone">Login by SMS otp Verification</a>
-                                    <a class="lost_pass" href="#">forget password?</a>
+                                    <a class="lost_pass" href="/signin/otp-phone">Login by SMS otp Verification</a><br>
+                                    <a class="lost_pass" href="/forgot-password">forget password?</a>
                                 </div>
                             </form>
                         </div>
