--- a/view/admin/category.ejs
+++ b/view/admin/category.ejs
@@ -7,21 +7,31 @@
 
     <div class="w-full overflow-hidden rounded-lg shadow-xs mt-2">
       <div class="w-full overflow-x-auto">
+
+
+        <button
+        class="px-5 py-3 mt-8 mx-auto font-medium w-64 leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
+        >
+        <a href="/admin/category/add-category">
+        Add Category
+      </a>
+      </button>     
+
         <table class="w-full whitespace-no-wrap">
           <thead>
             <tr
               class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800"
             >
-              <th class="px-4 py-3">No.</th>
-              <th class="px-4 py-3">First Name</th>
-              <th class="px-4 py-3">Last Name</th>
+              <th class="px-4 py-3">CatId</th>
+              <th class="px-4 py-3">Title</th>
+              <!-- <th class="px-4 py-3">Last Name</th>
               <th class="px-4 py-3">Email</th>
-              <th class="px-4 py-3">Mobile</th>
-              <th class="px-4 py-3">Block/Unblock</th>
+              <th class="px-4 py-3">Mobile</th> -->
+              <th class="px-4 py-3">Actions</th>
             </tr>
           </thead>
           <tbody class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-800">
-            <% users.forEach(user => {%>
+            <% category.forEach(el => {%>
 
             <tr class="text-gray-700 dark:text-gray-400">
               <td class="px-4 py-3 text-sm"></td>
@@ -31,19 +41,18 @@
                   <div class="relative hidden w-8 h-8 mr-3 rounded-full md:block">
                     <img
                       class="object-cover w-full h-full rounded-full"
-                      src="/user_img/<%= user.image %>"
+                      src="/category_img/<%= el.image %>"
                       alt=""
                       loading="lazy"
                     />
                     <div class="absolute inset-0 rounded-full shadow-inner" aria-hidden="true"></div>
                   </div>
                   <div>
-                    <p class="font-semibold"><%= user.fname %></p>
+                    <p class="font-semibold"><%= el.title %></p>
                   </div>
                 </div>
               </td>
-              <td class="px-4 py-3 text-sm"><%= user.lname %></td>
-              <td class="px-4 py-3 text-sm"><%= user.email %></td>
+
               <!-- <td class="px-4 py-3 text-xs">
                     <span
                       class="px-2 py-1 font-semibold leading-tight text-green-700 bg-green-100 rounded-full dark:bg-green-700 dark:text-green-100"
@@ -51,25 +60,17 @@
                       Approved
                     </span>
                   </td> -->
-              <td class="px-4 py-3 text-sm"><%= user.mob %></td>
+
               <td class="px-4 py-3">
-                <% if (!user.block) { %>
-                <a id="blockUser" href="/admin/clients/block/<%= user._id %>">
+
+                <a href="/admin/category/edit-category/<%= el._id %>">
                   <button
                     class="px-4 py-2 text-sm font-medium leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
                   >
-                    Block
+                    Edit
                   </button>
                 </a>
-                <% }else{ %>
-                <a id="unblockUser" href="/admin/clients/unblock/<%= user._id %>">
-                  <button
-                    class="px-4 py-2 text-sm font-medium leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
-                  >
-                    Unblock
-                  </button>
-                </a>
-                <% } %>
+
 
                 <!-- <div class="flex items-center space-x-4 text-sm">
                       <button
@@ -113,74 +114,7 @@
             <% }); %>
           </tbody>
         </table>
-      </div>
-      <div
-        class="grid px-4 py-3 text-xs font-semibold tracking-wide text-gray-500 uppercase border-t dark:border-gray-700 bg-gray-50 sm:grid-cols-9 dark:text-gray-400 dark:bg-gray-800"
-      >
-        <span class="flex items-center col-span-3"> Showing 21-30 of 100 </span>
-        <span class="col-span-2"></span>
-        <!-- Pagination -->
-        <span class="flex col-span-4 mt-2 sm:mt-auto sm:justify-end">
-          <nav aria-label="Table navigation">
-            <ul class="inline-flex items-center">
-              <li>
-                <button
-                  class="px-3 py-1 rounded-md rounded-l-lg focus:outline-none focus:shadow-outline-purple"
-                  aria-label="Previous"
-                >
-                  <svg class="w-4 h-4 fill-current" aria-hidden="true" viewBox="0 0 20 20">
-                    <path
-                      d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
-                      clip-rule="evenodd"
-                      fill-rule="evenodd"
-                    ></path>
-                  </svg>
-                </button>
-              </li>
-              <li>
-                <button class="px-3 py-1 rounded-md focus:outline-none focus:shadow-outline-purple">1</button>
-              </li>
-              <li>
-                <button class="px-3 py-1 rounded-md focus:outline-none focus:shadow-outline-purple">2</button>
-              </li>
-              <li>
-                <button
-                  class="px-3 py-1 text-white transition-colors duration-150 bg-purple-600 border border-r-0 border-purple-600 rounded-md focus:outline-none focus:shadow-outline-purple"
-                >
-                  3
-                </button>
-              </li>
-              <li>
-                <button class="px-3 py-1 rounded-md focus:outline-none focus:shadow-outline-purple">4</button>
-              </li>
-              <li>
-                <span class="px-3 py-1">...</span>
-              </li>
-              <li>
-                <button class="px-3 py-1 rounded-md focus:outline-none focus:shadow-outline-purple">8</button>
-              </li>
-              <li>
-                <button class="px-3 py-1 rounded-md focus:outline-none focus:shadow-outline-purple">9</button>
-              </li>
-              <li>
-                <button
-                  class="px-3 py-1 rounded-md rounded-r-lg focus:outline-none focus:shadow-outline-purple"
-                  aria-label="Next"
-                >
-                  <svg class="w-4 h-4 fill-current" aria-hidden="true" viewBox="0 0 20 20">
-                    <path
-                      d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                      clip-rule="evenodd"
-                      fill-rule="evenodd"
-                    ></path>
-                  </svg>
-                </button>
-              </li>
-            </ul>
-          </nav>
-        </span>
-      </div>
-    </div>
+
     <!-- TABLE END  -->
   </div>
   <!-- 
@@ -212,7 +146,7 @@ rows[i].insertBefore(td, rows[i].firstChild);
       if (i == 0) {
         continue;
       }
-      rows[i].children[0][text] = i + ' ' + rows[i].children[0][text];
+      rows[i].children[0][text] = i+100 + ' ' + rows[i].children[0][text];
     }
 
   </script>
