user signup otp done

--- a/view/user/login.ejs
+++ b/view/user/login.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs') %>
     
     <!-- breadcrumb start-->
-    <section class="breadcrumb breadcrumb_bg">
+    <!-- <section class="breadcrumb breadcrumb_bg">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -14,7 +14,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- breadcrumb start-->
 
     <!--================login_part Area =================-->
@@ -39,7 +39,7 @@
                             <form class="row contact_form" action="/signin" method="post">
                                 <div class="col-md-12 form-group p_star">
                                     <input type="email" class="form-control" id="email" name="email" value=""
-                                        placeholder="email">
+                                        placeholder="Email">
                                 </div>
                                 <div class="col-md-12 form-group p_star">
                                     <input type="password" class="form-control" id="password" name="password" value=""
