--- a/view/user/otp_page_signup.ejs
+++ b/view/user/otp_page_signup.ejs
@@ -25,7 +25,7 @@
         Welcome Back ! <br />
         Please Sign in by OTP-verification
       </h3>
-      <form class="row contact_form" action="/signin/otp-signin" method="post">
+      <form class="row contact_form" action="/signup/otp-signup" method="post">
         <div class="col-md-12 form-group p_star">
           <input type="number" class="form-control" id="otp" name="otp" placeholder="Verification Code" required/>
         </div>
