--- a/view/user/otp_phone.ejs
+++ b/view/user/otp_phone.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs') %>
 
 <!-- breadcrumb start-->
-<section class="breadcrumb breadcrumb_bg">
+<!-- <section class="breadcrumb breadcrumb_bg">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8">
@@ -14,7 +14,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 <!-- breadcrumb start-->
 
 <!--================login_part Area =================-->
