--- a/view/user/partials/header.ejs
+++ b/view/user/partials/header.ejs
@@ -145,7 +145,12 @@
                                 </div> -->
                 </div>
 
-                <a href="/signin"><i class="ti-user"></i>&nbsp; <span class="di-none">Sign In</span> </a>
+                <a href="/signin">
+                  <i class="ti-user"></i>
+                  &nbsp; <span class="di-none">
+                      Sign In
+                  </span>
+                </a>
 
               </div>
             </nav>
