--- a/view/user/partials/header.ejs
+++ b/view/user/partials/header.ejs
@@ -147,11 +147,8 @@
 
                 <a href="/signin">
                   <i class="ti-user"></i>
-                  &nbsp; <span class="di-none">
-                      Sign In
-                  </span>
+                  &nbsp; <span class="di-none"> Sign In </span>
                 </a>
-
               </div>
             </nav>
           </div>
