--- a/view/user/login.ejs
+++ b/view/user/login.ejs
@@ -44,6 +44,15 @@
               name="signupForm"
               onsubmit="return validate() ;"
             >
+            <% if (msg.length>0) { %>
+
+                <div class="alert alert-danger alert-dismissible fade show w-100" role="alert">
+                    <%= msg %>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+            <% } %>
               <div class="col-md-12 form-group p_star">
                 <input type="email" class="form-control" id="email" name="email" value="" placeholder="Email" />
               </div>
