--- a/view/user/signup.ejs
+++ b/view/user/signup.ejs
@@ -35,6 +35,14 @@
               name="signupForm"
               onsubmit="return validate()"
             >
+            <% if (msg.length>0) { %>
+                <div class="alert alert-danger alert-dismissible fade show w-100" role="alert">
+                    <%= msg %>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+            <% } %>
               <div class="col-md-6 form-group p_star">
                 <input
                   type="text"
