--- a/view/admin/partials/footer.ejs
+++ b/view/admin/partials/footer.ejs
@@ -76,7 +76,7 @@
   </div>
   <!-- End of modal backdrop -->
   <script>
-    function modalSaveDetails(dataObj){
+    function modalSaveDetails(){
       document.getElementById('modal-header').innerHTML=dataObj[0];
       document.getElementById('modal-description').innerHTML=dataObj[1];
     }
