--- a/view/admin/product_management.ejs
+++ b/view/admin/product_management.ejs
@@ -56,7 +56,7 @@
                     <div>
                       <p class="font-semibold"><%= products[i].title %></p>
                       <p class="text-xs text-gray-600 dark:text-gray-400">
-                        <%= products[i].brand %>
+                        <%= products[i].brand.title %>
                       </p>
                     </div>
 
@@ -68,7 +68,7 @@
                   <span
                     class="px-2 py-1 font-semibold leading-tight text-green-700 bg-green-100 rounded-full dark:bg-green-700 dark:text-green-100"
                   >
-                    <%= products[i].category %>
+                    <%= products[i].category.title %>
                   </span>
                 </td>
                 <td class="px-4 py-3 text-sm"><%= products[i].date %></td>
@@ -114,7 +114,7 @@
                 </td>
                 <td class="px-4 py-3 text-sm">                    
                   <button
-                  onclick="modalSaveDetails(['<%=products[i].title %>','<%=products[i].description%>'])" 
+                  onclick="modalSaveDetails([...['<%=products[i].title %>','<%=products[i].description%>'],...'<%=products[i].images%>'])" 
                   @click="openModal"
                   class="px-3 py-1 text-sm font-medium leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-md active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple">
                   View Details
