added images to view details

--- a/view/admin/product_management.ejs
+++ b/view/admin/product_management.ejs
@@ -114,7 +114,7 @@
                 </td>
                 <td class="px-4 py-3 text-sm">                    
                   <button
-                  onclick="modalSaveDetails([...['<%=products[i].title %>','<%=products[i].description%>'],...'<%=products[i].images%>'])" 
+                  onclick="modalSaveDetails(['<%=products[i].title %>','<%=products[i].description%>','<%=products[i].images%>'])" 
                   @click="openModal"
                   class="px-3 py-1 text-sm font-medium leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-md active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple">
                   View Details
